--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,15 @@
 <h1>About Me</h1>
+
+<h2>Skills</h2>
+<ul>
+  <% @skills.each do |skill| %>
+    <li><%= skill %></li>
+  <% end %>
+</ul>
+
+<h2>interests</h2>
+<ul>
+  <% @interests.each do |interest| %>
+    <li><%= interest %></li>
+  <% end %>
+</ul>
