Creating favourites route + view and outputting links within view

--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,5 +1,14 @@
-<h1>Welcome to the Gallery!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Welcome to the Gallery!</h1>
 
-<% 25.times do |i| %>
-  <img src="http://unsplash.it/200/300?random=<%=i%>">
-<% end %>
+    <% 25.times do |i| %>
+      <img src="http://unsplash.it/200/300?random=<%=i%>">
+    <% end %>
+  </body>
+</html>
