--- a/views/about.erb
+++ b/views/about.erb
@@ -1,15 +1,24 @@
-<h1>About Me</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>About Me</h1>
 
-<h2>Skills</h2>
-<ul>
-  <% @skills.each do |skill| %>
-    <li><%= skill %></li>
-  <% end %>
-</ul>
+    <h2>Skills</h2>
+    <ul>
+      <% @skills.each do |skill| %>
+        <li><%= skill %></li>
+      <% end %>
+    </ul>
 
-<h2>interests</h2>
-<ul>
-  <% @interests.each do |interest| %>
-    <li><%= interest %></li>
-  <% end %>
-</ul>
+    <h2>interests</h2>
+    <ul>
+      <% @interests.each do |interest| %>
+        <li><%= interest %></li>
+      <% end %>
+    </ul>
+  </body>
+</html>
