--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,10 @@
-<h1>Hi this is the home page</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Hi this is the home page</h1>
+  </body>
+</html>
